[package]
name = "godown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1",features = ["full"]}
reqwest = "0.11.10"
anyhow = "1"
clap = {version = "3.0",features = ["derive","std","cargo"]}
once_cell = "1.8"
regex = "1.5.5"


